--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!doctype html>
-<html>
+<html lang="ru">
 	<head>
 		<title>Romario Blog</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/mainStyle.css">
 	</head>
 	<body>
+    <!--Верхнее меню-->
+    <header id="header">
+      <h1>Easy JavaScript</h1>
+    <ul id="topMenuUl">
+
+    </ul>
+    </header>
 		<!--Аватарка-->
 		<div id="topMenu" class="topMenu">
 		</div>
@@ -16,9 +23,11 @@
 			<p id="topP" class="mainP"></p>
 		</div>
 		<div id="textDiv">
+      <hr>
 			<pre>
 			<p id="mainP" class="mainP"></p>
 			</pre>
+      <hr>
 		</div>
 		<!--Информация-->
 		<script src="js/main.js"></script>
